pamc/src/tests/sample_code/should_fail/parse/labeled_params/dashed_label.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(-x~y: Nat): Nat {
    Nat.O
};
